# rapyuta

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: regression_test.csv  regression_train.csv
notebook/: regression.ipynb
regression/: load_csv.py  plot.py  testing.py  training.py
