[tool.poetry]
name = "regression"
version = "0.1.0"
description = "Directory used for technical interview for intern/employee candidate"
authors = ["Daisuke Sato <daisuke.sato@arithmer.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.13"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
